--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,13 +29,12 @@ async-lock = { version = "3.3.0", optional = true }
 async-notify = "0.3"
 async-io = { version = "2.3.1", optional = true }
 async-process = { version = "2.1.0", optional = true }
-bincode-next = { version = "2.0.4", default-features = false, features = ["std", "serde"] }
+bincode-next = { version = "2.0.4", default-features = false, features = ["derive", "std"] }
 bytes = "1.5"
 futures-channel = { version = "0.3.30", features = ["sink"] }
 futures-util = { version = "0.3.30", features = ["sink"] }
 libc = "0.2.168"
 nix = { version = "0.29.0", default-features = false, features = ["fs", "mount", "user"] }
-serde = { version = "1.0.196", features = ["derive"] }
 slab = "0.4.9"
 tracing = "0.1.40"
 trait-make = "0.1"
